updated about text

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,14 +3,15 @@
 <html>
 
 <head>
-    <link rel="icon" href="/images/weather.png"
     <title>About</title>
+    <link rel="icon" href="/images/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <div class="main">
         {{>header}}  
+        <p>This app was created by Timmy Roma. it makes use of the mapbox and weatherstack API's</p>
         <img src="/images/MyImage.png" class="portrait">
     </div>
     {{>footer}}
