--- a/views/help.hbs
+++ b/views/help.hbs
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link rel="icon" href="/images/weather.png"
+    <link rel="icon" href="/images/weather.png">
     <title>Help</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
